<resources>
    <string name="app_name">PiaSample</string>

    <!-- Main screen -->
    <string name="payment_buy_btn">Buy</string>
    <string name="payment_total">Total</string>
    <string name="payment_amount">10.00</string>
    <string name="payment_enter_total_amount">Enter total amount</string>
    <string name="payment_description">Thank you for shopping on BikBok!</string>
    <string name="payment_value_zero">Please add a non-zero value.</string>
    <string name="payment_rollback_error">There was an error when rolling back the transaction.</string>
    <string name="payment_interrupted">Wallet Payment Interrupted.</string>
    <string name="setting_menu">Settings</string>
    <string name="share_menu">Share</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_sek">SEK</string>
    <string name="currency_dkk">DKK</string>
    <string name="currency_nok">NOK</string>


    <!-- payment methods dialog -->
    <string name="payment_method_title">Choose a payment method</string>
    <string name="payment_method_credit_cards">New Card</string>
    <string name="payment_method_other">Other</string>
    <string name="payment_method_not_supported">Payment method not supported. </string>
    <string name="card_expired_message">Card has expired. Please select a valid card! </string>
    <string name="card_expire_soon">Expire soon!</string>
    <string name="card_expired">Expired!</string>

    <!-- update customer id screen -->
    <string name="enter_customer_id">Enter customer ID</string>
    <string name="customer_id_is_invalid">Please fill in a customer id.</string>
    <string name="use_system_authentication">Use System Authentication</string>
    <string name="app_version">App version</string>
    <string name="alert_ok">OK</string>
    <string name="new_customer_id">New Customer ID</string>
    <string name="customer_id_hint">- - - - - -</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="customer_id">Customer ID</string>
    <string name="action_change">Change</string>
    <string name="application_version">Application Version</string>
    <string name="action_details">Details</string>
    <string name="features">Features</string>
    <string name="register_new_card">Register new card</string>
    <string name="register_new__sbusiness_card">Register S-Business card</string>
    <string name="action_register_new_card">Add</string>
    <string name="configurations">Configurations</string>
    <string name="use_test_environment">Use test environment</string>
    <string name="background_image">Background Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="customize_ui">Customize UI</string>
    <string name="action_customize">Custom</string>
    <string name="select_sdk_language">Select SDK Language</string>

    <!-- Confirmation Screen -->
    <string name="process_cancelled">Process is cancelled.</string>
    <string name="process_error">There was an error.\nPlease try again later.</string>
    <string name="card_saved_success">Your card has\nbeen saved.</string>
    <string name="thanks_for_shopping">Thanks for shopping</string>
    <string name="toolbar_title_cancelled">Cancelled</string>
    <string name="toolbar_title_failed">Failed</string>
    <string name="toolbar_title_success_save">Card Saved</string>
    <string name="toolbar_title_success_pay">Payment Completed</string>
    <string name="terminal_verification_failed_message">Examples of reason:\n• Credit card type denied\n• Velocity filter\n•Blocked IP\n…</string>

    <!-- Merchant Backend Settings Screen -->
    <string name="change_merchant_info">Change Merchant Info</string>
    <string name="merchant_backend_base_url">Merchant backend base URL</string>
    <string name="test_environment">Test environment</string>
    <string name="production_environment">Production environment</string>
    <string name="netaxept_merchant_id">Netaxept Merchant ID</string>
    <string name="test_merchant_id">Test Merchant ID</string>
    <string name="production_merchant_id">Production Merchant ID</string>
    <string name="customer_phone_number">Phone Number</string>
    <string name="test">Test</string>
    <string name="production">Production</string>
    <string name="new_configuration">New Configuration</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_ok">OK</string>
    <string name="merchant_be_settings_title">Merchant BE Settings</string>
    <string name="disable_cardio">Disable card scanner</string>
    <string name="exclude_card_scheme_check">Exclude all card schemes except VISA</string>
    <string name="include_card_scheme_check">Include custom card schemes image</string>
    <string name="exclude_co_branded_dankort_and_mastercard_scheme">Exclude CoBranded Dankort and MasterCard</string>

    <!-- Customize UI Screen -->
    <string name="global_ui_customization">Global UI Customization</string>
    <string name="navigation_bar_color">Navigation Bar Color</string>
    <string name="navigation_bar_item_color">Navigation Bar button Color</string>
    <string name="navigation_bar_title_color">Navigation Bar title Color</string>
    <string name="background_color">SDK Background Color</string>
    <string name="button_text_color">Pay Button text Color</string>
    <string name="main_button_background_drawable">Pay Button Background</string>
    <string name="label_text_color">Text Color</string>
    <string name="token_card_cvc_area_color">Saved Card CVC area color</string>
    <string name="text_field_color">Text entry text color</string>
    <string name="text_field_background_color">Text entry background color</string>
    <string name="text_field_success_color">Text entry success Color</string>
    <string name="text_field_error_color">Text entry error color</string>
    <string name="switch_thumb_color">Switch thumb Color</string>
    <string name="switch_on_tint_color">Switch track turn on color</string>
    <string name="use_sample_font_and_weight">Use sample font and weight</string>
    <string name="use_sample_image_for_logo">Use sample image for logo</string>
    <string name="turn_on_save_card_option">Turn save card switch on</string>
    <string name="disable_save_card_option">Disable save card</string>
    <!-- CardIO customization related strings -->
	<string name="cardio_ui_customization">Card scanner UI Customization</string>
    <string name="cardio_background">Card scanner Background</string>
    <string name="cardio_text_color">Card scanner Text Color</string>
    <string name="cardio_frame_color">Card scanner Frame Color</string>
    <string name="cardio_button_background">Card scanner Button Background</string>
    <string name="cardio_button_text_color">Card scanner Button Text color</string>
    <string name="cardio_text_font">Card scanner Text Font</string>
    <string name="cardio_button_text_font">Card scanner Button Text Font</string>
    <string name="text_on_hint_color">Text input hint color</string>
    <string name="input_text_border_color">Text input border color</string>
    <string name="save_card_text">Save Card Text</string>
    <string name="securely_save_card_text">Securely save my card for later use</string>
    <string name="use_action_button_left_margin">Use action button left margin</string>
    <string name="use_action_button_right_margin">Use action button right margin</string>
    <string name="use_action_button_bottom_margin">Use action button bottom margin</string>
    <string name="use_save_card_text">Use my card for future payment use</string>
    <string name="use_rounded_corner_field">Use rounded corner for fields</string>
    <string name="use_rounded_corner_button">Use rounded corner for button</string>
    <string name="use_skip_confirmation_switch">Use Skip Confirmation</string>
    <string name="switch_turn_on_color_text">Switch turn on color</string>
    <string name="switch_turn_off_color_text">Switch track turn off color</string>
    <!-- end CardIO customization related strings -->


</resources>
