<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_imgv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:elevation="2dp"
            android:src="@drawable/ic_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/products_imgv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/shipment_fee" />

                <LinearLayout
                    android:id="@+id/product_price_ll"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/payment_total"
                        android:textColor="#b3b3b3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="80dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="4dp"
                        android:background="#ACACAC" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="80dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/price_value_et"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/payment_enter_total_amount"
                            android:inputType="numberDecimal"
                            android:text="@string/payment_amount"
                            android:textColor="#484848"
                            android:textColorHint="#b3b3b3"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:padding="2dp"
                            style="@android:style/Widget.DeviceDefault.Light.Spinner"
                            android:id="@+id/currency_dropdown"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/payment_btn"
            style="@style/PositiveButton"
            android:text="@string/payment_buy_btn" />

    </LinearLayout>

</FrameLayout>